Project reorganized to work with Weather Icons API. Added reference to external CSS file to index. Re-arranged index contents to fit new design style and remove redundancy for now. Script updated to print code for weathericons instead of linking to the OpenWeatherMap API's icons, comments trimmed down, and code for swapUnits redone to avoid the original F value changing due to repeated rounding.

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ body {
   font-family: 'Abel', sans-serif;
   background: #2AC7AA;
 }
+/*
+h1 span:after {
+  display: inline;
+}*/
 
 #weatherBox {
   background: #FFF;
@@ -14,6 +18,10 @@ body {
 .nice {
   font-size: 2em;
   text-shadow: 1px 1px 1px #333;
+}
+
+#buttons {
+  margin: 10px 0px;
 }
 
 /* .well {
